[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Template for creating the hurtboxes in player and enemies"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="invincibility_ended" from="." to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
